# zephyr

./: CMakeLists.txt  CODEOWNERS  Kconfig.zephyr  MAINTAINERS.yml  version.h.in  west.yml
arch/: Kconfig
arch/arm/: Kconfig
arch/microblaze/: Kconfig  Kconfig.features
arch/posix/: CMakeLists.txt  Kconfig
arch/riscv/: Kconfig
boards/: index.rst
boards/microblaze/: index.rst
cmake/: llext-edk.cmake
cmake/modules/: boards.cmake  configuration_files.cmake  extensions.cmake  kconfig.cmake  kernel.cmake
doc/_scripts/: redirects.py
doc/introduction/: index.rst
doc/project/: release_process.rst
doc/releases/: migration-guide-3.6.rst  migration-guide-3.7.rst  release-notes-3.6.rst  release-notes-3.7.rst
drivers/adc/: adc_mcux_gau_adc.c  adc_nrfx_saadc.c
drivers/cache/: cache_nrf.c
drivers/can/: can_handlers.c  can_sam.c
drivers/clock_control/: CMakeLists.txt  Kconfig  clock_control_mcux_scg.c  clock_control_mcux_syscon.c
drivers/console/: Kconfig
drivers/counter/: counter_mcux_tpm.c  maxim_ds3231.c
drivers/dac/: CMakeLists.txt  Kconfig.mcux
drivers/disk/: flashdisk.c
drivers/dma/: CMakeLists.txt  dma_stm32u5.c
drivers/entropy/: CMakeLists.txt
drivers/espi/: espi_mchp_xec_v2.c
drivers/ethernet/: eth_nxp_enet.c
drivers/flash/: CMakeLists.txt  (+13 more)
kernel/: Kconfig  dynamic.c  fatal.c  init.c  ipi.c  msg_q.c  mutex.c  pipes.c  sched.c  thread.c  thread_monitor.c  timeslicing.c  userspace.c
modules/: Kconfig.mcux
samples/subsys/llext/edk/app/: CMakeLists.txt
scripts/: list_boards.py  west-commands.yml
submanifests/: optional.yaml
(+772 files in other folders)
